# Text2SQL

./: README.md  pyproject.toml
data/: prepare_sft.py  sft_train.py
data/sft/: train.jsonl  val.jsonl
databases/: ecommerce_orders.db  hr_employees.db
docs/: DATA_RECOVERY_PLAN.md  EXPERIMENT_CARD.md  FINETUNING_PLAN.md  LABELING_GUIDE.md  PILOT_RUNSHEET.md
eval/: eval_runner.py  run_eval.py  run_phase1.sh  run_phase2.sh  summarize.py
eval/internal/: v0.jsonl  v1.jsonl
eval/results/: Qwen2.5-14B-Instruct_r14a.jsonl  Qwen2.5-14B-Instruct_r14b.jsonl  Qwen2.5-14B-Instruct_r14c.jsonl  Qwen2.5-14B-Instruct_r14d.jsonl  Qwen2.5-14B-Instruct_r15a.jsonl  Qwen2.5-14B-Instruct_r15b.jsonl  Qwen2.5-14B-Instruct_r15c.jsonl  Qwen2.5-14B-Instruct_r15d.jsonl  Qwen2.5-14B-Instruct_r16a.jsonl  Qwen2.5-14B-Instruct_r16b.jsonl  Qwen2.5-14B-Instruct_r16c.jsonl  Qwen2.5-14B-Instruct_r16d.jsonl  Qwen2.5-14B-Instruct_r16e.jsonl  Qwen2.5-14B-Instruct_r16f.jsonl  Qwen2.5-14B-Instruct_r16g.jsonl  Qwen2.5-14B-Instruct_r16h.jsonl  Qwen2.5-14B-Instruct_r16i.jsonl  Qwen2.5-14B-Instruct_r16j.jsonl  Qwen3-0.6B_r14a.jsonl  Qwen3-0.6B_r14b.jsonl  Qwen3-0.6B_r14c.jsonl  Qwen3-0.6B_r14d.jsonl  Qwen3-0.6B_r15a.jsonl  Qwen3-0.6B_r15b.jsonl  Qwen3-0.6B_r15c.jsonl  Qwen3-0.6B_r15d.jsonl  Qwen3-0.6B_r16a.jsonl  Qwen3-0.6B_r16b.jsonl  Qwen3-0.6B_r16c.jsonl  Qwen3-0.6B_r16d.jsonl  Qwen3-0.6B_r16e.jsonl  Qwen3-0.6B_r16f.jsonl  Qwen3-0.6B_r16g.jsonl  Qwen3-0.6B_r16h.jsonl  Qwen3-0.6B_r16i.jsonl  Qwen3-0.6B_r16j.jsonl  Qwen3-14B_r14a.jsonl  Qwen3-14B_r14b.jsonl  Qwen3-14B_r14c.jsonl  (+105 more)
tests/: test_eval.py
(+2 files in other folders)
